	PR c++/42338 	* mangle.c (write_expression): Handle tree codes that have extra 	arguments in the middle-end. 	* cp-demangle.c (d_print_comp): Fix array index printing.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156103 138bc75d-0d04-0410-961f-82ee72b054a4